# ace-step-studio

./: .gitignore  README.md  installation.md
backend/: README.md  pyproject.toml
backend/ace_step_suno_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: config.py  database.py  hardware.py  main.py  migrations.py  runtime_config.py
backend/app/routers/: __init__.py  config.py  generate.py  history.py  llm.py  models.py
backend/app/schemas/: config.py  generation.py  llm.py
backend/app/services/: ace_engine.py  ace_prompt.py  cover_theme.py  generation_service.py  image_generator.py  llm.py  model_manager.py
backend/app/utils/: audio.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: CoverUploadModal.tsx  CreatePanel.tsx  LibraryPanel.tsx  PlaybackBar.tsx  SettingsModal.tsx  SongDetailPanel.tsx  SongEditModal.tsx
frontend/src/hooks/: useConfig.ts  useHistory.ts
frontend/src/lib/: api.ts
frontend/src/types/: config.ts  generation.ts  llm.ts
frontend/src/utils/: covers.tsx
scripts/: install_mac.sh  install_windows.ps1  start.bat  start.sh
