[project]
name = "ace-step-suno-backend"
version = "0.1.0"
description = "FastAPI backend for the ACE-Step Suno-style web app"
authors = [{ name = "Rob Laughter", email = "rob@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "sqlalchemy>=2.0.25",
  "aiosqlite>=0.19.0",
  "greenlet>=3.0.0",
  "alembic>=1.13.1",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "aiofiles>=23.2.1",
  "passlib[bcrypt]>=1.7.4",
  "httpx>=0.27.0",
  "numpy>=1.26.4,<2",
  "soundfile>=0.12.1",
  "tenacity>=9.0.0",
  "huggingface_hub>=0.20.0"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
